Fixed pause screen (p) and worked a bit in the grappling hook area

--- a/MyProject3/Config/DefaultInput.ini
+++ b/MyProject3/Config/DefaultInput.ini
@@ -112,7 +112,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire Grappling Hook",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Detach Grappling Hook",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Pull-in Grappling Hook",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Toggle Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
